--- a/report/bib.bib
+++ b/report/bib.bib
@@ -1,9 +1,3 @@
-@misc{Tesla,
-title = {NVIDIA TESLA V100 GPU ARCHITECTURE},
-author = {Nvidia},
-note = {\url{https://images.nvidia.com/content/volta-architecture/pdf/volta-architecture-whitepaper.pdf}},
-year = {2017}
-}
 
 @article{10.1162/evco.1996.4.4.361,
     author = {Blickle, Tobias and Thiele, Lothar},
@@ -54,4 +48,36 @@ month = {06},
 pages = {},
 title = {The GENITOR Algorithm and Selection Pressure: Why Rank-Based Allocation of Reproductive Trials is Best},
 volume = {89}
+}
+
+@article{Chellapilla1998,
+   author = {K Chellapilla},
+   doi = {10.1109/4235.735431},
+   issn = {1089-778X},
+   issue = {3},
+   journal = {IEEE transactions on evolutionary computation},
+   keywords = {Computational modeling},
+   pages = {91-96},
+   publisher = {IEEE},
+   title = {Combining mutation operators in evolutionary programming},
+   volume = {2},
+   year = {1998},
+}
+
+@article{SoftSign,
+author = {Foundation, The and Elliott, David},
+year = {1998},
+month = {12},
+pages = {},
+title = {A better Activation Function for Artificial Neural Networks}
+}
+@inproceedings{replacement,
+author = {Mumford, Christine},
+year = {2004},
+month = {06},
+pages = {1389-1400},
+title = {Simple Population Replacement Strategies for a Steady-State Multi-objective Evolutionary Algorithm},
+volume = {3102},
+isbn = {978-3-540-22344-3},
+doi = {10.1007/978-3-540-24854-5_132}
 }
